# tv

./: .cursorrules  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  b.csv  compare_versions.py  debug_arrow.rs  draft.webm  example.py  fix_formatting_plan.md  formatting_parity_summary.md  generate_arrow_test_files.py  getting_started.py  github_actions_example.yml  integration_example.py  pyproject.toml  requirements.txt  setup.py  test_example.py  test_output_parity.py  test_python_tv.py  test_rust_tv.py  test_simple.py  test_uncompressed.feather  tidy-viewer-1.4.30-2.x86_64.rpm  tidy-viewer-1.4.5.x86_64.rpm
.github/workflows/: ci.yml  docs.yml  py-release.yml  release.yml  rust.yml
ci/: build-deb  cargo-out-dir  macos-install-packages  sha256-releases  ubuntu-install-packages  utils.sh
config/: config.toml
conformal-regress/: LICENSE  PACKAGE_SUMMARY.md  README.md  setup.py
conformal-regress/conformal_regress/: __init__.py
conformal-regress/examples/: __init__.py  basic_usage.py
conformal-regress/tests/: __init__.py  test_basic.py
conformal_regress/: __init__.py  api.py  conformal.py  formula.py  linalg.py  models.py  summary.py  viewing.py
conformal_regress/conformal/: base.py
conformal_regress/core/: model.py  regress.py
conformal_regress/formula/: parser.py
conformal_regress/models/: base.py
conformal_regress/utils/: display.py
data/: a.R  a.csv  d.csv  ellipsis.csv  flag_f_test.csv  index_sigifg_bug_75.csv  iris.csv  issue_32.csv  issue_33.csv  logical.csv  long_doubles_74.csv  norm_train.csv  norms.csv  sci_notation.csv  sci_notation_short.csv  sigs.csv  tab_sep.csv  test_large.arrow  test_large.feather  test_large.ipc  test_medium.arrow  test_medium.feather  test_medium.ipc  test_scientific.csv  test_scientific_notation.csv  test_small.arrow  test_small.feather  test_small.ipc  unequal_lengths.csv  unicode_pr55.csv  view_csv.py
docs/: AUTOMATION.md  RELEASE.md  TESTING.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/aho_corasick/: all.html  enum.AhoCorasickKind.html  enum.Anchored.html  enum.MatchErrorKind.html  enum.MatchKind.html  enum.StartKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.BuildError.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Input.html  struct.Match.html  struct.MatchError.html  struct.PatternID.html  struct.PatternIDError.html  struct.Span.html  struct.StreamFindIter.html
docs/either/: all.html  enum.Either.html  index.html  macro.try_left.html  macro.try_right.html  sidebar-items.js
docs/itertools/: all.html  enum.Diff.html  enum.Either.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.MinMaxResult.html  enum.Position.html  fn.all.html  fn.any.html  fn.assert_equal.html  fn.chain.html  fn.cloned.html  fn.concat.html  fn.cons_tuples.html  fn.diff_with.html  fn.enumerate.html  fn.equal.html  fn.fold.html  fn.interleave.html  fn.iterate.html  fn.join.html  fn.kmerge.html  fn.kmerge_by.html  fn.max.html  fn.merge.html  fn.merge_join_by.html  fn.min.html  fn.multipeek.html  fn.multizip.html  fn.partition.html  fn.peek_nth.html  fn.process_results.html  fn.put_back.html  fn.put_back_n.html  fn.rciter.html  fn.repeat_call.html  fn.repeat_n.html  fn.rev.html  fn.sorted.html  fn.unfold.html  (+8 more)
docs/lazy_static/: all.html  fn.initialize.html  index.html  macro.lazy_static.html  trait.LazyStatic.html
docs/memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
docs/regex/: all.html  enum.Error.html  fn.escape.html  index.html  struct.CaptureLocations.html  struct.CaptureMatches.html  struct.CaptureNames.html  struct.Captures.html  struct.Match.html  struct.Matches.html  struct.NoExpand.html  struct.Regex.html  struct.RegexBuilder.html  struct.RegexSet.html  struct.RegexSetBuilder.html  struct.ReplacerRef.html  struct.SetMatches.html  struct.SetMatchesIntoIter.html  struct.SetMatchesIter.html  struct.Split.html  struct.SplitN.html  struct.SubCaptureMatches.html  trait.Replacer.html
docs/regex_automata/: all.html  enum.Anchored.html  enum.MatchErrorKind.html  enum.MatchKind.html  index.html  struct.HalfMatch.html  struct.Input.html  struct.Match.html  struct.MatchError.html  struct.PatternID.html  struct.PatternSet.html  struct.PatternSetInsertError.html  struct.PatternSetIter.html  struct.Span.html
docs/regex_syntax/: all.html  enum.Error.html  fn.escape.html  fn.escape_into.html  fn.is_escapeable_character.html  fn.is_meta_character.html  fn.is_word_byte.html  fn.is_word_character.html  fn.parse.html  fn.try_is_word_character.html  (+4 more)
examples/: smoke_test.py
scripts/: generate-docs.ps1  generate-docs.sh  test-release.ps1  test-release.sh
snap/: snapcraft.yaml
src/: datatype.rs  lib.rs  main.rs  sigfig.rs  term_attr.rs
tidy-viewer-cli/: Cargo.toml  LICENSE  README.md
tidy-viewer-cli/src/: datatype.rs  lib.rs  main.rs
tidy-viewer-core/: Cargo.toml
tidy-viewer-core/src/: datatype.rs  lib.rs
tidy-viewer-py/: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  README_getting_started.md  demo.py  demo_dataframes.py  demo_polars_dtypes.py  getting_started.py  prepare_build.py  pyproject.toml  test_output_parity.py  test_simple.py
tidy-viewer-py/.github/workflows/: ci.yml  release.yml
tidy-viewer-py/src/: datatype.rs  formatting.rs  lib.rs  types.rs
tidy-viewer-py/src/datatype/: sigfig.rs
tidy-viewer-py/src/tidy_viewer_py/: __init__.py  dtype_mapping.py
tidy-viewer-py/tests/: conftest.py  test_basic.py  test_data_basic.csv  test_data_numeric.csv  test_data_unicode.csv  test_dtype_mapping.py  test_edge_cases.py  test_polars_dtypes.py
tidy-viewer-py/tidy-viewer-core/: Cargo.toml
tidy-viewer-py/tidy-viewer-core/src/datatype/: sigfig.rs
(+751 files in other folders)
