[package]
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
categories = ["command-line-utilities"]
description = "Head, but for CSV files and with color"
edition = "2021"
keywords = ["csv", "tv", "csv-viewer", "csv-pretty-print", "csv-cat"]
license = "Unlicense OR MIT"
name = "tidy-viewer"
readme = "README.md"
repository = "https://github.com/alexhallam/tv"
version = "1.6.0"

[package.metadata.deb]
assets = [
  [
    "target/release/tidy-viewer",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/cargo-deb/README",
    "644",
  ],
]
depends = "$auto"
extended-description = """\
Tidy Viewer (tv) is a csv pretty printer that uses \
column styling to maximize viewer enjoyment.
"""
license-file = ["UNLICENSE", "0"]
maintainer = "Alex Hallam <alexhallam6.28@gmail.com>"
priority = "optional"
section = "utility"

[dependencies]
atty = "0.2.14"
calm_io = "0.1.1"
console = "0.15.0"
crossterm = "0.22.1"
csv = "1.1.6"
directories = "4.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
owo-colors = "3.0.1"
parquet = "53.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.21"
toml = "0.5"
unicode-truncate = "0.2.0"
unicode-width = "0.1.11"
