[workspace]
members = ["tidy-viewer-core", "tidy-viewer-cli", "tidy-viewer-py"]
default-members = ["tidy-viewer-core", "tidy-viewer-cli"]
resolver = "2"

[workspace.package]
version = "1.8.6"
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
edition = "2021"
license = "Unlicense OR MIT"
repository = "https://github.com/alexhallam/tv"
readme = "README.md"

[workspace.dependencies]
arrow = "56.0"
arrow-ipc = { version = "56.0", features = ["lz4"] }
atty = "0.2.14"
calm_io = "0.1.1"
console = "0.15.0"
crossterm = "0.22.1"
csv = "1.1.6"
directories = "4.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
lz4 = "1.28.1"
owo-colors = "3.0.1"
parquet = "56.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.21"
toml = "0.5"
unicode-truncate = "0.2.0"
unicode-width = "0.1.11"
thiserror = "1.0"
# Ensure workspace members inherit the local core crate
 tidy-viewer-core = { path = "tidy-viewer-core" }

[patch.crates-io]
tidy-viewer-core = { path = "tidy-viewer-core" }
