[package]
name = "tidy-viewer"
version = "1.8.1"
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
edition = "2021"
license = "Unlicense OR MIT"
repository = "https://github.com/alexhallam/tv"
readme = "README.md"
description = "Head, but for CSV files and with color"
categories = ["command-line-utilities"]
keywords = ["csv", "tv", "csv-viewer", "csv-pretty-print", "csv-cat"]

[[bin]]
name = "tidy-viewer"
path = "src/main.rs"

[package.metadata.deb]
assets = [
    [
        "target/release/tidy-viewer",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/cargo-deb/README",
        "644",
    ],
]
depends = "$auto"
extended-description = """\
Tidy Viewer (tv) is a csv pretty printer that uses \
column styling to maximize viewer enjoyment.
"""
license-file = ["UNLICENSE", "0"]
maintainer = "Alex Hallam <alexhallam6.28@gmail.com>"
priority = "optional"
section = "utility"

[dependencies]
tidy-viewer-core = { workspace = true }
arrow = { workspace = true }
arrow-ipc = { workspace = true }
atty = { workspace = true }
calm_io = { workspace = true }
console = { workspace = true }
crossterm = { workspace = true }
csv = { workspace = true }
directories = { workspace = true }
itertools = { workspace = true }
lz4 = { workspace = true }
owo-colors = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
toml = { workspace = true }
