[package]
name = "tidy-viewer-core"
version.workspace = true
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core formatting logic for tidy-viewer"

[dependencies]
lazy_static = { workspace = true }
regex = { workspace = true }
unicode-truncate = { workspace = true }
unicode-width = { workspace = true }
itertools = { workspace = true }
