[package]
name = "tidy-viewer-core"
version = "1.8.0"
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
edition = "2021"
license = "Unlicense OR MIT"
repository = "https://github.com/alexhallam/tv"
readme = "README.md"
description = "Core formatting logic for tidy-viewer"

[dependencies]
lazy_static = { workspace = true }
regex = { workspace = true }
unicode-truncate = { workspace = true }
unicode-width = { workspace = true }
itertools = { workspace = true }
