[package]
name = "tidy-viewer-py"
version.workspace = true
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Python bindings for tidy-viewer"

[lib]
name = "tidy_viewer_py"
crate-type = ["cdylib"]

[dependencies]
tidy-viewer-core = { path = "../tidy-viewer-core" }
pyo3 = { version = "0.25", features = ["extension-module"] }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
owo-colors = { workspace = true }
unicode-width = { workspace = true }
unicode-truncate = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
