[package]
name = "tidy-viewer-py"
version = "1.8.2"
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
edition = "2021"
license = "Unlicense OR MIT"
repository = "https://github.com/alexhallam/tv"
readme = "README.md"
description = "Python bindings for tidy-viewer"
publish = false

[lib]
name = "tidy_viewer_py"
crate-type = ["cdylib"]

[dependencies]
tidy-viewer-core = { path = "../tidy-viewer-core" }
pyo3 = { version = "0.25", features = ["extension-module"] }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
owo-colors = { workspace = true }
unicode-width = { workspace = true }
unicode-truncate = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
