[package]
name = "tidy-viewer-py"
version = "1.8.94"
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
edition = "2021"
license = "Unlicense OR MIT"
repository = "https://github.com/alexhallam/tv"
readme = "README.md"
description = "Python bindings for tidy-viewer"
publish = false

[lib]
name = "tidy_viewer_py"
crate-type = ["cdylib"]

[dependencies]
tidy-viewer-core = { path = "tidy-viewer-core" }
pyo3 = { version = "0.25", features = ["extension-module"] }
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "48.0"
parquet = "48.0"
owo-colors = "3.0.1"
unicode-width = "0.1.11"
unicode-truncate = "0.2.0"
lazy_static = "1.4.0"
regex = "1.5.4"
anyhow = "1.0"
crossterm = "0.22.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
