[project]
name = "tidy-viewer-py"
version = "0.2.9"
description = "A cross-platform data pretty printer that uses column styling to maximize viewer enjoyment. Supports CSV, Parquet, Pandas, and Polars DataFrames."
readme = "README.md"
authors = [{ name = "Alex Hallam", email = "alexhallam6.28@gmail.com" }]
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
keywords = ["table", "formatting", "terminal", "pretty-print", "csv", "parquet"]
dependencies = [
    "maturin>=1.9.3",
    "pandas>=2.0.3",
    "polars>=1.8.2",
    "pyarrow>=17.0.0",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "pandas>=1.0",
    "pyarrow>=10.0",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/tidy-viewer-py"
Repository = "https://github.com/yourusername/tidy-viewer-py"
Issues = "https://github.com/yourusername/tidy-viewer-py/issues"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "tidy_viewer_py._core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
